Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-5107

MDS oops during mount with latest lustre 2.5.1 snapshot

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.5.2
    • Lustre 2.5.1
    • None
    • MDS server
    • 3
    • 14091

      With the latest 2.5.1 snapshot when I attempt to bring up a file system I'm seeing the following bug on the MDS during the MDT mount. Because of this I can' currently mount a 2.5 file system for testing.

      May 27 16:55:19 tick-dne-mds1 kernel: [ 546.512335] LustreError: 13869:0:(osp_dev.c:864:osp_prepare_fid_client()) ASSERTION( osp->opd
      _obd->u.cli.cl_seq != ((void *)0) ) failed:
      May 27 16:55:19 tick-dne-mds1 kernel: [ 546.548335] LustreError: 13869:0:(osp_dev.c:864:osp_prepare_fid_client()) LBUG
      May 27 16:55:19 tick-dne-mds1 kernel: [ 546.569232] Pid: 13869, comm: ptlrpcd_rcv
      May 27 16:55:19 tick-dne-mds1 kernel: [ 546.579503]
      May 27 16:55:19 tick-dne-mds1 kernel: [ 546.579503] Call Trace:
      May 27 16:55:19 tick-dne-mds1 kernel: [ 546.598249] [<ffffffffa05f3895>] libcfs_debug_dumpstack+0x55/0x80 [libcfs]
      May 27 16:55:19 tick-dne-mds1 kernel: [ 546.618857] [<ffffffffa05f3e97>] lbug_with_loc+0x47/0xb0 [libcfs]
      May 27 16:55:19 tick-dne-mds1 kernel: [ 546.638835] [<ffffffffa108ee34>] osp_import_event+0x3d4/0x410 [osp]
      May 27 16:55:19 tick-dne-mds1 kernel: [ 546.659079] [<ffffffffa09207cc>] ptlrpc_activate_import+0x12c/0x270 [ptlrpc]
      May 27 16:55:19 tick-dne-mds1 kernel: [ 546.688094] [<ffffffffa0923502>] ptlrpc_connect_interpret+0x1912/0x2160 [ptlrpc]
      May 27 16:55:19 tick-dne-mds1 kernel: [ 546.708910] [<ffffffffa08f894c>] ptlrpc_check_set+0x2bc/0x1b50 [ptlrpc]
      May 27 16:55:19 tick-dne-mds1 kernel: [ 546.729238] [<ffffffffa0924cab>] ptlrpcd_check+0x53b/0x560 [ptlrpc]
      May 27 16:55:20 tick-dne-mds1 kernel: [ 546.749421] [<ffffffffa09251cb>] ptlrpcd+0x20b/0x370 [ptlrpc]
      May 27 16:55:20 tick-dne-mds1 kernel: [ 546.769286] [<ffffffff81061d00>] ? default_wake_function+0x0/0x20
      May 27 16:55:20 tick-dne-mds1 kernel: [ 546.789361] [<ffffffffa0924fc0>] ? ptlrpcd+0x0/0x370 [ptlrpc]
      May 27 16:55:20 tick-dne-mds1 kernel: [ 546.809414] [<ffffffff8109ab56>] kthread+0x96/0xa0
      May 27 16:55:20 tick-dne-mds1 kernel: [ 546.828800] [<ffffffff8100c20a>] child_rip+0xa/0x20
      May 27 16:55:20 tick-dne-mds1 kernel: [ 546.848257] [<ffffffff8109aac0>] ? kthread+0x0/0xa0
      May 27 16:55:20 tick-dne-mds1 kernel: [ 546.859345] [<ffffffff8100c200>] ? child_rip+0x0/0x20
      May 27 16:55:20 tick-dne-mds1 kernel: [ 546.879015]

            di.wang Di Wang (Inactive)
            simmonsja James A Simmons
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: