LU-5107 osp: only check FID for OSP connecting to OST

The backport of http://review.whamcloud.com/8997 to b2_5
(commit ed82a26746d22) didn't need MDT OSPs to allocate FIDs.
The call to osp_prepare_fid_client(d) should be moved after
the check if the OSP connecting to OST, because only such OSP
will intialize its FID client.

Test-Parameters: mdtcount=2 mdscount=2 testlist=sanity
Signed-off-by: wang di <di.wang@intel.com>
Change-Id: I0306a086d9274d520aa43b82ccdb39966ef2ae97
Reviewed-on: http://review.whamcloud.com/10476
Reviewed-by: James Simmons <uja.ornl@gmail.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>